--- a/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
@@ -55,7 +55,7 @@
 						<div uk-dropdown="animation: uk-animation-slide-top-small; mode: click">
 							<ul class="uk-nav uk-dropdown-nav uk-text-left">
 								<li>
-									<h:link styleClass="uk-link-reset" outcome="detalle-escuela">
+									<h:link styleClass="uk-link-reset" outcome="detallesEscuela">
 										<span uk-icon="icon: file-text" class="uk-margin-small-right"/>
 										<h:outputText value="#{mensaje['button.detail']}"/>
 										<f:param value="#{escuela.claveCentroTrabajo}" name="claveCentroTrabajo"/>
