--- a/tecolotl-web/src/main/webapp/administracion/detallesEscuela.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/detallesEscuela.xhtml
@@ -17,74 +17,222 @@
             <h2 class="uk-text-center uk-margin-medium-top uk-background-primary uk-padding-small"><span class="letra-titulo">Datos de la escuela</span></h2>
 
 
-                <div  uk-grid="" >
+                <div uk-grid="">
 
-
-                    <div class="uk-width-1-5@m uk-width-1-1@s ">
-                        <h:outputLabel styleClass="uk-form-label" for="cct" value="CCT" />
-                        <h:inputText id="cct" value="#{escuelaDetalleControlador.escuelaDetalleDto.claveCentroTrabajo}" disabled="true"  styleClass="uk-input"/>
-                    </div>
-
-                    <div class="uk-width-3-5@m uk-width-1-1@s" >
-                        <h:outputLabel styleClass="uk-form-label" for="nombre-escuela" value="#{mensaje['school-details.table.name']}" />
-                        <h:inputText id="nombre-escuela" value="#{escuelaDetalleControlador.escuelaDetalleDto.nombre}"  disabled="true" styleClass="uk-input"/>
-                    </div>
-                    <div class="uk-width-1-5@m uk-width-1-1@s">
-                        <h:outputLabel styleClass="uk-form-label" for="codigo-postal" value="#{mensaje['school.details.zipcode']}" />
-                        <h:inputText  id="codigo-postal" value="#{escuelaDetalleControlador.escuelaDetalleDto.coloniaDto.codigoPostal}" disabled="true"  styleClass="uk-input"/>
-                    </div>
-                    <div class="uk-width-1-2@m uk-width-1-1@s">
-                        <h:outputLabel styleClass="uk-form-label" for="colonia" value="#{mensaje['school.details.colony']}" />
-                        <h:inputText id="colonia" value="#{escuelaDetalleControlador.escuelaDetalleDto.coloniaDto.nombre}" disabled="true" styleClass="uk-input"/>
-                    </div>
-                    <div class="uk-width-1-2@m uk-width-1-1@s">
-                        <h:outputLabel styleClass="uk-form-label" for="municipio" value="#{mensaje['school.details.town']}" />
-                        <h:inputText id="municipio" value="#{escuelaDetalleControlador.escuelaDetalleDto.municipioDto.nombre}" disabled="true"  styleClass="uk-input"/>
-                    </div>
-                    <div class="uk-width-1-5@m uk-width-1-1@s">
-                        <h:outputLabel styleClass="uk-form-label" for="estado" value="#{mensaje['school.details.state']}" />
-                        <h:inputText id="estado" value="#{escuelaDetalleControlador.escuelaDetalleDto.estadoDto.nombre}" disabled="true" styleClass="uk-input"/>
-                    </div>
-                    <div class="uk-width-3-5@m uk-width-1-1@s">
-                        <h:outputLabel styleClass="uk-form-label" for="calle" value="#{mensaje['school.details.street']}" />
-                        <h:inputText id="calle" value="#{escuelaDetalleControlador.escuelaDetalleDto.calle}" disabled="true" styleClass="uk-input"/>
-                    </div>
-                    <div class="uk-width-1-5@m uk-width-1-1@s">
-                        <h:outputLabel styleClass="uk-form-label" for="numero-exterior" value="#{mensaje['school.details.number.out']}" />
-                        <h:inputText id="numero-exterior" value="#{escuelaDetalleControlador.escuelaDetalleDto.numeroExterior}" disabled="true" styleClass="uk-input"/>
-                    </div>
-                    <div class="uk-width-1-5@m uk-width-1-1@s">
-                        <h:outputLabel styleClass="uk-form-label" for="numero-interior" value="#{mensaje['school.details.number.in']}" />
-                        <h:inputText id="numero-interior" value="#{escuelaDetalleControlador.escuelaDetalleDto.numeroInterior}" disabled="true" styleClass="uk-input"/>
-                    </div>
-                    <div class="uk-width-1-5@m uk-width-1-1@s">
-                        <h:outputLabel styleClass="uk-form-label" for="estado-bloqueo" value="#{mensaje['school.detail.blockade']}" />
-                        <h:inputText id="estado-bloqueo" value="#{escuelaDetalleControlador.escuelaDetalleDto.motivoBlqueoDto.descripcion}" disabled="true" styleClass="uk-input"/>
-                    </div>
-                    <div class="uk-width-1-5@m uk-width-1-1@s">
-                        <h:outputLabel styleClass="uk-form-label" for="licencias" value="#{mensaje['school.details.license']}" />
-                        <h:inputText id="licencias" value="#{escuelaDetalleControlador.escuelaDetalleDto.licenciaDtoList}" disabled="true" styleClass="uk-input"/>
-                    </div>
-                    <div class="uk-width-1-5@m uk-width-1-1@s">
-                        <label class="uk-form-label" ></label>
-
-                    </div>
-
-                    <div class="uk-width-1-5@m uk-width-1-1@s">
-                        <div class="uk-width-1-1@m  uk-flex uk-flex-right@m uk-flex-center@s">
-                            <label class="uk-width-1-1@m uk-width-1-2@suk-panel uk-form-label" for="licencias" >Ver Coordinadores</label>
-                        </div>
-                        <div class="uk-width-1-1@m  uk-flex uk-flex-right@m uk-flex-center@s">
-
-                            <a class="uk-link-reset" href="Detalles-escuela-coord.html">
-                                <button class="uk-button uk-button-primary"><span>Coord(a)</span><span class="uk-margin-small-left " uk-icon="icon: users"></span></button>
-                            </a>
+                        <div class="uk-width-1-5@m uk-width-1-1@s ">
+                            <h:outputLabel styleClass="uk-form-label" for="cct" value="CCT" />
+                            <h:inputText id="cct" value="#{escuelaDetalleControlador.escuelaDetalleDto.claveCentroTrabajo}" disabled="true"  styleClass="uk-input"/>
                         </div>
 
+                        <div class="uk-width-3-5@m uk-width-1-1@s" >
+                            <h:outputLabel styleClass="uk-form-label" for="nombre-escuela" value="#{mensaje['school-details.table.name']}" />
+                            <h:inputText id="nombre-escuela" value="#{escuelaDetalleControlador.escuelaDetalleDto.nombre}"  disabled="true" styleClass="uk-input"/>
+                        </div>
+                        <div class="uk-width-1-5@m uk-width-1-1@s">
+                            <h:outputLabel styleClass="uk-form-label" for="codigo-postal" value="#{mensaje['school.details.zipcode']}" />
+                            <h:inputText  id="codigo-postal" value="#{escuelaDetalleControlador.escuelaDetalleDto.coloniaDto.codigoPostal}" disabled="true"  styleClass="uk-input"/>
+                        </div>
+                        <div class="uk-width-1-2@m uk-width-1-1@s">
+                            <h:outputLabel styleClass="uk-form-label" for="colonia" value="#{mensaje['school.details.colony']}" />
+                            <h:inputText id="colonia" value="#{escuelaDetalleControlador.escuelaDetalleDto.coloniaDto.nombre}" disabled="true" styleClass="uk-input"/>
+                        </div>
+                        <div class="uk-width-1-2@m uk-width-1-1@s">
+                            <h:outputLabel styleClass="uk-form-label" for="municipio" value="#{mensaje['school.details.town']}" />
+                            <h:inputText id="municipio" value="#{escuelaDetalleControlador.escuelaDetalleDto.municipioDto.nombre}" disabled="true"  styleClass="uk-input"/>
+                        </div>
+                        <div class="uk-width-1-5@m uk-width-1-1@s">
+                            <h:outputLabel styleClass="uk-form-label" for="estado" value="#{mensaje['school.details.state']}" />
+                            <h:inputText id="estado" value="#{escuelaDetalleControlador.escuelaDetalleDto.estadoDto.nombre}" disabled="true" styleClass="uk-input"/>
+                        </div>
+                        <div class="uk-width-3-5@m uk-width-1-1@s">
+                            <h:outputLabel styleClass="uk-form-label" for="calle" value="#{mensaje['school.details.street']}" />
+                            <h:inputText id="calle" value="#{escuelaDetalleControlador.escuelaDetalleDto.calle}" disabled="true" styleClass="uk-input"/>
+                        </div>
+                        <div class="uk-width-1-5@m uk-width-1-1@s">
+                            <h:outputLabel styleClass="uk-form-label" for="numero-exterior" value="#{mensaje['school.details.number.out']}" />
+                            <h:inputText id="numero-exterior" value="#{escuelaDetalleControlador.escuelaDetalleDto.numeroExterior}" disabled="true" styleClass="uk-input"/>
+                        </div>
+                        <div class="uk-width-1-5@m uk-width-1-1@s">
+                            <h:outputLabel styleClass="uk-form-label" for="numero-interior" value="#{mensaje['school.details.number.in']}" />
+                            <h:inputText id="numero-interior" value="#{escuelaDetalleControlador.escuelaDetalleDto.numeroInterior}" disabled="true" styleClass="uk-input"/>
+                        </div>
+                        <div class="uk-width-1-5@m uk-width-1-1@s">
+                            <h:outputLabel styleClass="uk-form-label" for="estado-bloqueo" value="#{mensaje['school.detail.blockade']}" />
+                            <h:inputText id="estado-bloqueo" value="#{escuelaDetalleControlador.escuelaDetalleDto.motivoBlqueoDto.descripcion}" disabled="true" styleClass="uk-input"/>
+                        </div>
+                        <div class="uk-width-1-5@m uk-width-1-1@s">
+                            <h:outputLabel styleClass="uk-form-label" for="licencias" value="#{mensaje['school.details.license']}" />
+                            <h:inputText id="licencias" value="#{escuelaDetalleControlador.escuelaDetalleDto.licenciaDtoList.size()}" disabled="true" styleClass="uk-input"/>
+                        </div>
+                        <div class="uk-width-1-5@m uk-width-1-1@s">
+                            <label class="uk-form-label" ></label>
 
-                    </div>
+                        </div>
 
+                        <div class="uk-width-1-5@m uk-width-1-1@s">
+                            <div class="uk-width-1-1@m  uk-flex uk-flex-right@m uk-flex-center@s">
+                                <label class="uk-width-1-1@m uk-width-1-2@suk-panel uk-form-label" for="licencias" >Ver Coordinadores</label>
+                            </div>
+                            <div class="uk-width-1-1@m  uk-flex uk-flex-right@m uk-flex-center@s">
+                                <h:form>
+                                    <h:commandLink styleClass="uk-link-reset" value="catalogo"  >
+                                        <button class="uk-button uk-button-primary"><span>Coord(a)</span><span class="uk-margin-small-left " uk-icon="icon: users"></span></button>
+                                    </h:commandLink>
+                                </h:form>
+                            </div>
+
+
+                        </div>
                 </div>
+
+        <div uk-grid="" class="uk-margin-medium-top ">
+
+            <div class="uk-width-auto@m uk-overflow-auto uk-width-expand@s ">
+                <h3 class="uk-text-center uk-heading-line "><span class="">Contactos</span></h3>
+
+                <h:form id="formulario-tabla-contacto">
+                    <h:dataTable id="tabla-contacto"
+                                 styleClass="uk-table uk-table-small uk-margin-remove-top uk-table-divider uk-table-hover"
+                                 value="#{escuelaDetalleControlador.escuelaDetalleDto.contactoDtoList}"
+                                 var="contacto"
+                                 rowClasses="uk-text-center"
+                                 headerClass="uk-background-primary uk-text-center"
+                                 >
+                        <h:column >
+                            <f:facet name="header"><h:outputText value="#{mensaje['school.details.table.name']}" styleClass="letra-titulo" ></h:outputText></f:facet>
+                            #{contacto.nombre}
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header"><h:outputText value="#{mensaje['school.details.table.type']}" styleClass="letra-titulo"/> </f:facet>
+                            #{contacto.tipoContactoDto.descripcion}
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header"><h:outputText value="#{mensaje['school.details.table.phone']}" styleClass="letra-titulo"/> </f:facet>
+                            #{contacto.telefono}
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header"><h:outputText value="#{mensaje['school.details.table.type']}" styleClass="letra-titulo"/> </f:facet>
+                            <button class="uk-icon-button uk-margin-small-right" uk-icon="icon: more-vertical" ></button>
+                            <div class=" boundary">
+                                <div uk-dropdown="mode: click; boundary: .boundary">
+                                    <ul class="uk-nav uk-dropdown-nav">
+                                        <li>
+                                            <span uk-icon="icon: trash" styleClass="uk-margin-small-right"></span>
+                                            <h:outputText styleClass="uk-text-right uk-text-bold " value="Eliminar">
+                                            </h:outputText>
+                                        </li>
+                                        <li>
+                                            <span uk-icon="icon: settings" styleClass="uk-margin-small-right"></span>
+                                            <h:outputText styleClass="uk-text-right uk-text-bold" value="Modificar">
+                                                <!--<a class="uk-link-reset" href="#modal-modificar" uk-toggle="">Modificar</a>-->
+                                            </h:outputText>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </h:column>
+
+
+
+
+                    </h:dataTable>
+
+
+
+                </h:form>
+
+
+                <div class="uk-flex uk-flex-right uk-margin-small-top "><button class="uk-button uk-button-primary"  uk-toggle="target: #modal-agregar-contacto" ><span >Agregar</span> <span class="uk-margin-small-left " uk-icon="icon: plus-circle"></span> </button></div>
+            </div>
+
+
+            <div class="uk-width-auto@m uk-overflow-auto ">
+
+                <h3 class=" uk-text-center uk-heading-line"><span>Licencias</span></h3>
+                <table class="uk-table uk-table-small uk-table-divider uk-table-hover uk-table-middle">
+                    <thead class="uk-text-center">
+                    <tr class="uk-background-primary ">
+                        <th><span class="letra-titulo">ID</span></th>
+                        <th class="uk-text-center"><span class="letra-titulo">Usuarios Restantes</span></th>
+                    </tr>
+                    </thead>
+                    <tbody class="uk-text-center">
+                    <tr>
+                        <td>1</td>
+                        <td>0</td>
+                    </tr>
+                    <tr class="">
+                        <td>2</td>
+                        <td >52</td>
+                    </tr>
+
+                    </tbody>
+                </table>
+                <div class="uk-flex uk-flex-right"><button class="uk-button uk-button-primary" uk-toggle="target: #modal-agregar-licencia" ><span >Agregar</span> <span class="uk-margin-small-left " uk-icon="icon: plus-circle"></span> </button></div>
+
+
+            </div>
+        </div>
+
+        <script type="text/javascript">
+            var modalBusquedaNombre = document.querySelector('#modal-busqueda-nombre');
+            var modalEscuela = document.querySelector('#modal-escuela');
+            var modalEliminar = document.querySelector('#modal-eliminar');
+            document.addEventListener("DOMContentLoaded", function (evt) {
+                limpiaInput();
+                UIkit.util.on('#modal-busqueda-nombre', 'hidden', function () {
+                    modalBusquedaNombre.querySelectorAll('.uk-input').forEach(function (entrada) { entrada.value = '' });
+                });
+                UIkit.util.on('#modal-escuela', 'hidden', function () {
+                    modalEscuela.querySelectorAll('.uk-input').forEach(function (entrada) { entrada.value = '' });
+                });
+            });
+
+            function cierraModal(data, modal) {
+                if (data.status === 'success') {
+                    switch (modal) {
+                        case 'modal-escuela':
+                            if (modalEscuela.querySelector('.uk-alert-danger') === null) {
+                                UIkit.modal(modalEscuela).hide();
+                            }
+                            break;
+                        case 'modal-busqueda-nombre':
+                            UIkit.modal(modalBusquedaNombre).hide();
+                            break;
+                        case 'modal-eliminar':
+                            UIkit.modal(modalEliminar).hide();
+                            break;
+                        case 'modal-busqueda-nombre':
+                            UIkit.modal(modalBusquedaNombre).hide();
+                            break;
+                    }
+                }
+                limpiaInput();
+            }
+
+            function abrebModal(data, modal) {
+                if (data.status === 'success') {
+                    switch (modal) {
+                        case 'modal-escuela':
+                            UIkit.modal(modalEscuela).show();
+                            modalEscuela.querySelector('.uk-input').click();
+                            break;
+                        case 'modal-eliminar':
+                            UIkit.modal(modalEliminar).show();
+                            modalEscuela.querySelector('.uk-input').click();
+                        case 'modal-busqueda-nombre':
+                            UIkit.modal(modalBusquedaNombre).show();
+                            modalBusquedaNombre.querySelector('.uk-input').click();
+                    }
+                }
+                limpiaInput()
+            }
+
+            function limpiaInput() {
+                document.querySelectorAll('.uk-select').forEach(function (value) { value.removeAttribute('size') });
+            }
+        </script>
+
 
 
     </ui:define>
